# hid2mqtt

./: .gitignore  LICENSE  README.md  REUSE.toml
docs/: provisioning-qr.md
firmware/: CMakeLists.txt  REUSE.toml  partitions_two_ota_large.csv  platformio.ini  sdkconfig.lolin_s2_mini
firmware/src/: CMakeLists.txt  config_lock.c  config_lock.h  idf_components.yml  main.c  mqtt.c  mqtt.h  ota.c  ota.h  qr_provisioning.c  qr_provisioning.h  usb_hid.c  usb_hid.h  wifi.c  wifi.h
